<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cwags.staysane_router_sp2017.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!-- A menu item for our router's IP address -->
    <item
        android:id="@+id/showIPAddress"
        android:orderInCategory="110"
        android:title="@string/IPMenuItem" />

    <!-- A menu item for our router's IP address -->
    <item
        android:id="@+id/addAjacency"
        android:orderInCategory="120"
        android:title="@string/AddAdjacencyTableMenuItem" />

</menu>
